--- a/master.css
+++ b/master.css
@@ -1,12 +1,16 @@
 body{
   background-color: black !important;
+  background-image: url(space.jpg), url(waves.jpg);
+  background-repeat: no-repeat;
 }
 .logo-image{
-  height: 50%;
-  width: 50%;
+  height: 40%;
+  width: 40%;
   display: block;
   margin-left: auto;
   margin-right: auto;
+  animation: flash; /* referring directly to the animation's @keyframe declaration */
+  animation-duration: 4s; /* don't forget to set a duration! */
 }
 .main-text{
   font-family: 'Raleway', sans-serif;
@@ -22,4 +26,13 @@ a:link, a:visited {
 
 a:link:active, a:visited:active {
   color: white;
+}
+.animate__animated.animate__flash {
+  --animate-duration: 4s;
+}
+
+/* This changes all the animations globally */
+:root {
+  --animate-duration: 800ms;
+  --animate-delay: 0.9s;
 }
