--- a/master.css
+++ b/master.css
@@ -1,7 +1,8 @@
 body{
   background-color: black !important;
-  background-image: url(space.jpg), url(waves.jpg);
-  background-repeat: no-repeat;
+  background-image: url(space.jpg), url(astro.jpg);
+  background-repeat: no-repeat, no-repeat;
+  background-attachment: scroll, fixed;
 }
 .logo-image{
   height: 40%;
@@ -9,10 +10,16 @@ body{
   display: block;
   margin-left: auto;
   margin-right: auto;
-  animation: flash; /* referring directly to the animation's @keyframe declaration */
-  animation-duration: 4s; /* don't forget to set a duration! */
+  animation: flash;
+  animation-duration: 4s;
 }
 .main-text{
+  font-family: 'Raleway', sans-serif;
+  font-weight:700;
+  color: white;
+}
+
+.section-text {
   font-family: 'Raleway', sans-serif;
   font-weight:700;
   color: white;
