--- a/master.css
+++ b/master.css
@@ -1,13 +1,13 @@
 .index-body{
   background-color: black !important;
-  background-image: url(space.jpg), url(astro.jpg);
+  background-image: url(images/space.jpg), url(images/astro.jpg);
   background-repeat: no-repeat, no-repeat;
   background-attachment: scroll, fixed;
 }
 
 .research-body{
   background-color: black !important;
-  background-image: url(space.jpg), url(astro.jpg);
+  background-image: url(images/space.jpg), url(images/astro.jpg);
   background-color: rgba(200,100,0,.5); /* Tint color */
   background-blend-mode: multiply;
   background-repeat: no-repeat, no-repeat;
@@ -23,14 +23,29 @@
   animation: flash;
   animation-duration: 4s;
 }
-.main-text{
+
+.ylla-text{
   font-family: 'Raleway', sans-serif;
   font-weight:700;
   color: white;
 }
 
+.main-text{
+  font-family: 'Roboto', sans-serif;
+  font-weight:700;
+  color: white;
+}
+
+.section-title {
+  font-family: 'Roboto', sans-serif;
+  font-size: 30px;
+  font-weight:700;
+  color: white;
+}
+
 .section-text {
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Roboto', sans-serif;
+  font-size: 22px;
   font-weight:700;
   color: white;
 }
@@ -52,4 +67,84 @@ a:link:active, a:visited:active {
 :root {
   --animate-duration: 800ms;
   --animate-delay: 0.9s;
+}
+
+
+.timeline-1 {
+  border-left: 3px solid #FFFFFF;
+  border-bottom-right-radius: 4px;
+  border-top-right-radius: 4px;
+  background: rgba(000, 000, 000, 0.5);
+  margin: 0 auto;
+  position: relative;
+  padding: 50px;
+  list-style: none;
+  text-align: left;
+  max-width: 40%;
+}
+
+@media (max-width: 767px) {
+  .timeline-1 {
+    max-width: 98%;
+    padding: 25px;
+  }
+}
+
+.timeline-1 .event {
+  border-bottom: 1px dashed #FFF;
+  padding-bottom: 25px;
+  margin-bottom: 25px;
+  position: relative;
+}
+
+@media (max-width: 767px) {
+  .timeline-1 .event {
+    padding-top: 30px;
+  }
+}
+
+.timeline-1 .event:last-of-type {
+  padding-bottom: 0;
+  margin-bottom: 0;
+  border: none;
+}
+
+.timeline-1 .event:before,
+.timeline-1 .event:after {
+  position: absolute;
+  display: block;
+  top: 0;
+}
+
+.timeline-1 .event:before {
+  left: -207px;
+  text-align: right;
+  font-weight: 100;
+  font-size: 0.9em;
+  min-width: 120px;
+}
+
+@media (max-width: 767px) {
+  .timeline-1 .event:before {
+    left: 0px;
+    text-align: left;
+  }
+}
+
+.timeline-1 .event:after {
+  -webkit-box-shadow: 0 0 0 3px #FFF;
+  box-shadow: 0 0 0 3px #FFF;
+  left: -55.8px;
+  background: #fff;
+  border-radius: 50%;
+  height: 9px;
+  width: 9px;
+  content: "";
+  top: 5px;
+}
+
+@media (max-width: 767px) {
+  .timeline-1 .event:after {
+    left: -31.8px;
+  }
 }
