--- a/master.css
+++ b/master.css
@@ -1,8 +1,5 @@
 .index-body{
   background-color: black !important;
-  background-image: url(images/space.jpg), url(images/astro.jpg);
-  background-repeat: no-repeat, no-repeat;
-  background-attachment: scroll, fixed;
 }
 
 .research-body{
@@ -22,31 +19,36 @@
   margin-right: auto;
   animation: flash;
   animation-duration: 4s;
+  z-index: 2;
+  position: relative;
 }
 
 .ylla-text{
   font-family: 'Raleway', sans-serif;
   font-weight:700;
   color: white;
+  z-index: 2;
+  position: relative;
 }
 
 .main-text{
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-weight:700;
   color: white;
 }
 
 .section-title {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-size: 30px;
   font-weight:700;
   color: white;
 }
 
 .section-text {
-  font-family: 'Roboto', sans-serif;
-  font-size: 22px;
-  font-weight:700;
+  font-family: 'Raleway', sans-serif;
+  font-size: 18px;
+  line-height: 26px;
+  font-weight:400;
   color: white;
 }
 
@@ -67,4 +69,33 @@ a:link:active, a:visited:active {
 :root {
   --animate-duration: 800ms;
   --animate-delay: 0.9s;
+}
+
+html,body {
+    width:100vw;
+    height: 100vh;
+    margin: 0;
+}
+.video-section {
+    position:absolute;
+    z-index: -1;
+    top: 0;
+}
+@media (min-aspect-ratio: 16/9) {
+    .video-section {
+        width:100%;
+        height: auto;
+    }
+}
+@media (max-aspect-ratio: 16/9) {
+    .video-section {
+        width:auto;
+        height: 100%;
+    }
+}
+@media (max-width: 767px) {
+    .video-section {
+        width:auto;
+        height: 100%;
+    }
 }
