--- a/master.css
+++ b/master.css
@@ -1,5 +1,12 @@
 .index-body{
   background-color: black !important;
+
+  overflow-x: hidden !important;
+  max-width: 100%;
+  max-height: 100%;
+}
+html {
+  scroll-behavior: smooth;
 }
 
 .research-body{
@@ -28,6 +35,16 @@
   font-weight:700;
   color: white;
   z-index: 2;
+  font-size: 280%;
+  position: relative;
+}
+
+.sub-text{
+  font-family: 'Raleway', sans-serif;
+  font-weight:700;
+  color: white;
+  z-index: 2;
+  font-size: 220%;
   position: relative;
 }
 
@@ -39,14 +56,14 @@
 
 .section-title {
   font-family: 'Raleway', sans-serif;
-  font-size: 30px;
+  font-size: 180%;
   font-weight:700;
   color: white;
 }
 
 .section-text {
   font-family: 'Raleway', sans-serif;
-  font-size: 18px;
+  font-size: 100%;
   line-height: 26px;
   font-weight:400;
   color: white;
@@ -71,31 +88,16 @@ a:link:active, a:visited:active {
   --animate-delay: 0.9s;
 }
 
-html,body {
-    width:100vw;
-    height: 100vh;
-    margin: 0;
+.section-1{
+  width: 100%;
+  height: 100%;
 }
-.video-section {
-    position:absolute;
-    z-index: -1;
-    top: 0;
-}
-@media (min-aspect-ratio: 16/9) {
-    .video-section {
-        width:100%;
-        height: auto;
-    }
-}
-@media (max-aspect-ratio: 16/9) {
-    .video-section {
-        width:auto;
-        height: 100%;
-    }
-}
-@media (max-width: 767px) {
-    .video-section {
-        width:auto;
-        height: 100%;
-    }
+
+video {
+  object-fit: cover;
+  z-index: -1;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
 }
