--- a/master.css
+++ b/master.css
@@ -91,6 +91,9 @@ a:link:active, a:visited:active {
 .section-1{
   width: 100%;
   height: 100%;
+  position: relative;
+  top:0;
+  padding-bottom: 4%;
 }
 
 video {
